--- a/cart.html
+++ b/cart.html
@@ -48,20 +48,7 @@
 
     <!-- ================================================ HEADER ================================================ -->
     <header class="header" id="header">
-        <div class="header-top">
-            <div class="header-container flexitem container">
-                <div class="header-contact">
-                    <span>(+01) - 2345 - 6789</span>
-                    <span> Our Location</span>
-                </div>
-                <p class="header-alert-news">
-                    Get 30% extra discount on your first order.
-                </p>
-                <a href="login-register.html" class="header-top-action">
-                    Log in/Sign Up
-                </a>
-            </div>
-        </div>
+        <div class="header-top"> </div>
         <nav class="navbar flexitem container">
             <a href="#" class="nav-logo">
                 <img src="assets/images/logo.svg" alt="" class="nav-logo-img">
@@ -72,15 +59,11 @@
                     <li class="nav-item">
                         <a href="index.html" class="nav-link">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="shop.html" class="nav-link active-link">Shop</a>
-                    </li>
+                    <li class="nav-item hide-item"> </li>
                     <li class="nav-item">
                         <a href="accounts.html" class="nav-link">My Account</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="compare.html" class="nav-link">Compare</a>
-                    </li>
+                    <li class="nav-item hide-item"> </li>
                     <li class="nav-item">
                         <a href="login-register.html" class="nav-link">Login</a>
                     </li>
@@ -114,7 +97,7 @@
             <ul class="breadcrumb-list flexitem container">
                 <li><a href="index.html" class="breadcrumb-link">Home</a></li>
                 <li><span class="breadcrumb-link">></span></li>
-                <li><span class="breadcrumb-link">Shop</span></li>
+                <li><a href="shop.html" class="breadcrumb-link hide-item">Shop</a></li>
                 <li><span class="breadcrumb-link">></span></li>
                 <li><span class="breadcrumb-link">Cart</span></li>
             </ul>
@@ -212,44 +195,8 @@
             </div>
 
             <div class="cart-group grid">
-                <div>
-                    <div class="cart-shipping">
-                        <h3 class="section-title">Calculate Shipping</h3>
-
-                        <form action="" class="form grid">
-                            <input type="text" placeholder="State / Country" class="form-input">
-
-                            <div class="form-group grid">
-                                <input type="text" placeholder="City" class="form-input">
-                                <input type="text" placeholder="PostCode / ZIP" class="form-input">
-                            </div>
-
-                            <div class="form-btn">
-                                <button class="btn flexitem btn-sm">
-                                    <i class="ri-shuffle-line"></i> Update
-                                </button>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="cart-coupon">
-                        <h3 class="section-title">Apply Coupon</h3>
-
-                        <form action="" class="coupon-form form grid">
-                            <div class="form-group grid">
-                                <input type="text" class="form-input" placeholder="Enter Your Coupon">
-
-                                <div class="form-btn">
-                                    <button class="btn flexitem btn-sm">
-                                        <i class="ri-coupon-2-line"></i> Apply
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-
-                <div class="cart-total">
-                    <h3 class="section-title">Cart Totals</h3>
+<div class="cart-total">
+        <h3 class="section-title">Cart Totals</h3>
 
                     <table class="cart-total-table">
                         <tr>
@@ -258,7 +205,7 @@
                         </tr>
 
                         <tr>
-                            <td><span class="cart-total-title">Shipping</span></td>
+                            <td><span class="cart-total-title">Delivery</span></td>
                             <td><span class="cart-total-price">$10.00</span></td>
                         </tr>
 
@@ -279,22 +226,6 @@
     </main>
 
     <!-- ================================================ NEWSLETTER ================================================ -->
-    <section class="newsletter section">
-        <div class="newsletter-container container grid">
-            <h3 class="newsletter-title flexitem">
-                <img src="assets/images/icon-email.svg" alt="" class="newsletter-icon">
-                Sign Up to Newsletter
-            </h3>
-            <p class="newsletter-description">
-                ...and recieve $25 coupon for first shopping.
-            </p>
-            <form action="" class="newsletter-form">
-                <input type="email" placeholder="Enter Your Email" class="newsletter-input">
-                <button type="submit" class="newsletter-btn">Subscribe</button>
-            </form>
-        </div>
-    </section>
-
     <!-- ================================================ FOOTER ================================================ -->
     <footer class="footer container">
         <div class="footer-container grid">
@@ -342,7 +273,7 @@
                     <li><a href="#" class="footer-link">Sign In</a></li>
                     <li><a href="#" class="footer-link">View Cart</a></li>
                     <li><a href="#" class="footer-link">My Wishlist</a></li>
-                    <li><a href="#" class="footer-link">Track My Order</a></li>
+                    <li></li>
                     <li><a href="#" class="footer-link">Help</a></li>
                     <li><a href="#" class="footer-link">Order</a></li>
                 </ul>
@@ -356,7 +287,7 @@
                     <li><a href="#" class="footer-link">Privacy Policy</a></li>
                     <li><a href="#" class="footer-link">Terms & Conditions</a></li>
                     <li><a href="#" class="footer-link">Contact Us</a></li>
-                    <li><a href="#" class="footer-link">Support Center</a></li>
+                    <li></li>
                 </ul>
             </div>
             <div class="footer-content">
