--- a/compare.html
+++ b/compare.html
@@ -72,14 +72,14 @@
                     <li class="nav-item">
                         <a href="index.html" class="nav-link">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="shop.html" class="nav-link">Shop</a>
+                    <li class="nav-item hide-item">
+                        <a href="shop.html" class="nav-link">Products</a>
+                    </li>
+                    <li class="nav-item hide-item">
+                        <a href="compare.html" class="nav-link active">Compare</a>
                     </li>
                     <li class="nav-item">
                         <a href="accounts.html" class="nav-link">My Account</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="compare.html" class="nav-link active-link">Compare</a>
                     </li>
                     <li class="nav-item">
                         <a href="login-register.html" class="nav-link">Login</a>
@@ -109,15 +109,6 @@
 
     <!-- ================================================ MAIN ================================================ -->
     <main class="main">
-        <!-- ================================================ BREADCRUMB ================================================ -->
-        <section class="breadcrumb">
-            <ul class="breadcrumb-list flexitem container">
-                <li><a href="index.html" class="breadcrumb-link">Home</a></li>
-                <li><span class="breadcrumb-link">></span></li>
-                <li><span class="breadcrumb-link">Compare</span></li>
-            </ul>
-        </section>
-
         <!-- ================================================ COMPARE ================================================ -->
         <section class="compare container section-lg">
             <table class="compare-table">
