--- a/details.html
+++ b/details.html
@@ -71,14 +71,14 @@
                     <li class="nav-item">
                         <a href="index.html" class="nav-link">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="shop.html" class="nav-link active-link">Shop</a>
+                    <li class="nav-item hide-item">
+                        <a href="shop.html" class="nav-link">Products</a>
+                    </li>
+                    <li class="nav-item hide-item">
+                        <a href="compare.html" class="nav-link">Compare</a>
                     </li>
                     <li class="nav-item">
                         <a href="accounts.html" class="nav-link">My Account</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="compare.html" class="nav-link">Compare</a>
                     </li>
                     <li class="nav-item">
                         <a href="login-register.html" class="nav-link">Login</a>
@@ -111,7 +111,7 @@
         <!-- ================================================ BREADCRUMB ================================================ -->
         <section class="breadcrumb">
             <ul class="breadcrumb-list flexitem container">
-                <li><a href="index.html" class="breadcrumb-link">Home</a></li>
+                <li class="hide-home"><a href="index.html" class="breadcrumb-link">Home</a></li>
                 <li><span class="breadcrumb-link">></span></li>
                 <li><span class="breadcrumb-link">Fashion</span></li>
                 <li><span class="breadcrumb-link">></span></li>
