--- a/accounts.html
+++ b/accounts.html
@@ -72,15 +72,11 @@
                     <li class="nav-item">
                         <a href="index.html" class="nav-link">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="shop.html" class="nav-link">Shop</a>
-                    </li>
+                    <li class="nav-item"> </li>
                     <li class="nav-item">
                         <a href="accounts.html" class="nav-link active-link">My Account</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="compare.html" class="nav-link">Compare</a>
-                    </li>
+                    <li class="nav-item"> </li>
                     <li class="nav-item">
                         <a href="login-register.html" class="nav-link">Login</a>
                     </li>
@@ -110,13 +106,7 @@
     <!-- ================================================ MAIN ================================================ -->
     <main class="main">
         <!-- ================================================ BREADCRUMB ================================================ -->
-        <section class="breadcrumb">
-            <ul class="breadcrumb-list flexitem container">
-                <li><a href="index.html" class="breadcrumb-link">Home</a></li>
-                <li><span class="breadcrumb-link">></span></li>
-                <li><span class="breadcrumb-link">My Account</span></li>
-            </ul>
-        </section>
+        <section class="breadcrumb"> </section>
 
         <!-- ================================================ COMPARE ================================================ -->
         <section class="accounts section-lg">
