--- a/checkout.html
+++ b/checkout.html
@@ -72,13 +72,13 @@
                     <li class="nav-item">
                         <a href="index.html" class="nav-link">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item hide-item">
                         <a href="shop.html" class="nav-link active-link">Shop</a>
                     </li>
                     <li class="nav-item">
                         <a href="accounts.html" class="nav-link">My Account</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item hide-item">
                         <a href="compare.html" class="nav-link">Compare</a>
                     </li>
                     <li class="nav-item">
@@ -114,7 +114,7 @@
             <ul class="breadcrumb-list flexitem container">
                 <li><a href="index.html" class="breadcrumb-link">Home</a></li>
                 <li><span class="breadcrumb-link">></span></li>
-                <li><span class="breadcrumb-link">Shop</span></li>
+                <li><a href="shop.html" class="breadcrumb-link hide-item">Shop</a></li>
                 <li><span class="breadcrumb-link">></span></li>
                 <li><span class="breadcrumb-link">Checkout</span></li>
             </ul>
