--- a/login-register.html
+++ b/login-register.html
@@ -47,20 +47,7 @@
 
     <!-- ================================================ HEADER ================================================ -->
     <header class="header" id="header">
-        <div class="header-top">
-            <div class="header-container flexitem container">
-                <div class="header-contact">
-                    <span>(+01) - 2345 - 6789</span>
-                    <span> Our Location</span>
-                </div>
-                <p class="header-alert-news">
-                    Get 30% extra discount on your first order.
-                </p>
-                <a href="login-register.html" class="header-top-action">
-                    Log in/Sign Up
-                </a>
-            </div>
-        </div>
+        <div class="header-top"> </div>
         <nav class="navbar flexitem container">
             <a href="#" class="nav-logo">
                 <img src="assets/images/logo.svg" alt="" class="nav-logo-img">
@@ -71,14 +58,10 @@
                     <li class="nav-item">
                         <a href="index.html" class="nav-link">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="shop.html" class="nav-link">Shop</a>
-                    </li>
+                    <li class="nav-item hide-item"> </li>
+                    <li class="nav-item hide-item"> </li>
                     <li class="nav-item">
                         <a href="accounts.html" class="nav-link">My Account</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="compare.html" class="nav-link">Compare</a>
                     </li>
                     <li class="nav-item">
                         <a href="login-register.html" class="nav-link active-link">Login</a>
@@ -109,13 +92,7 @@
     <!-- ================================================ MAIN ================================================ -->
     <main class="main">
         <!-- ================================================ BREADCRUMB ================================================ -->
-        <section class="breadcrumb">
-            <ul class="breadcrumb-list flexitem container">
-                <li><a href="index.html" class="breadcrumb-link">Home</a></li>
-                <li><span class="breadcrumb-link">></span></li>
-                <li><span class="breadcrumb-link">Login / Register</span></li>
-            </ul>
-        </section>
+        <section class="breadcrumb"> </section>
 
         <!-- ================================================ LOGIN / REGISTER ================================================ -->
         <section class="login-register section-lg">
@@ -150,23 +127,7 @@
             </div>
         </section>
 
-        <!-- ================================================ NEWSLETTER ================================================ -->
-        <section class="newsletter section">
-            <div class="newsletter-container container grid">
-                <h3 class="newsletter-title flexitem">
-                    <img src="assets/images/icon-email.svg" alt="" class="newsletter-icon">
-                    Sign Up to Newsletter
-                </h3>
-                <p class="newsletter-description">
-                    ...and recieve $25 coupon for first shopping.
-                </p>
-                <form action="" class="newsletter-form">
-                    <input type="email" placeholder="Enter Your Email" class="newsletter-input">
-                    <button type="submit" class="newsletter-btn">Subscribe</button>
-                </form>
-            </div>
-        </section>
-    </main>
+        <!-- ================================================ NEWSLETTER ================================================ -->    </main>
 
 
 
