--- a/shop.html
+++ b/shop.html
@@ -50,17 +50,7 @@
     <header class="header" id="header">
         <div class="header-top">
             <div class="header-container flexitem container">
-                <div class="header-contact">
-                    <span>(+01) - 2345 - 6789</span>
-                    <span> Our Location</span>
-                </div>
-                <p class="header-alert-news">
-                    Get 30% extra discount on your first order.
-                </p>
-                <a href="login-register.html" class="header-top-action">
-                    Log in/Sign Up
-                </a>
-            </div>
+                          </div>
         </div>
         <nav class="navbar flexitem container">
             <a href="#" class="nav-logo">
@@ -70,17 +60,13 @@
             <div class="nav-menu flexitem" id="nav-menu">
                 <ul class="nav-list flexitem">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home</a>
+                        <a href="shop.html" class="nav-link active">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="shop.html" class="nav-link active-link">Shop</a>
-                    </li>
+                    <li class="nav-item hide-item"> </li>
                     <li class="nav-item">
                         <a href="accounts.html" class="nav-link">My Account</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="compare.html" class="nav-link">Compare</a>
-                    </li>
+                    <li class="nav-item"> </li>
                     <li class="nav-item">
                         <a href="login-register.html" class="nav-link">Login</a>
                     </li>
@@ -112,15 +98,12 @@
         <!-- ================================================ BREADCRUMB ================================================ -->
         <section class="breadcrumb">
             <ul class="breadcrumb-list flexitem container">
-                <li><a href="index.html" class="breadcrumb-link">Home</a></li>
-                <li><span class="breadcrumb-link">></span></li>
-                <li><span class="breadcrumb-link">Shop</span></li>
+                <li></li>
             </ul>
         </section>
 
         <!-- ================================================ PRODUCTS ================================================ -->
         <section class="product section-lg container">
-            <p class="total-products">We found <span>688</span> items for you!</p>
 
             <div class="products-container grid">
                 <div class="product-item">
@@ -138,13 +121,9 @@
                             <a href="#" class="action-btn" aria-label="Add to Wishlist">
                                 <i class="ri-heart-3-line"></i>
                             </a>
-
-                            <a href="#" class="action-btn" aria-label="Compare">
-                                <i class="ri-shuffle-line"></i>
-                            </a>
                         </div>
 
-                        <div class="product-badge light-pink">Hot</div>
+                        <div class="product-badge light-pink">H</div>
                     </div>
 
                     <div class="product-content">
@@ -419,10 +398,6 @@
 
                             <a href="#" class="action-btn" aria-label="Add to Wishlist">
                                 <i class="ri-heart-3-line"></i>
-                            </a>
-
-                            <a href="#" class="action-btn" aria-label="Compare">
-                                <i class="ri-shuffle-line"></i>
                             </a>
                         </div>
 
@@ -703,19 +678,7 @@
 
     <!-- ================================================ NEWSLETTER ================================================ -->
     <section class="newsletter section">
-        <div class="newsletter-container container grid">
-            <h3 class="newsletter-title flexitem">
-                <img src="assets/images/icon-email.svg" alt="" class="newsletter-icon">
-                Sign Up to Newsletter
-            </h3>
-            <p class="newsletter-description">
-                ...and recieve $25 coupon for first shopping.
-            </p>
-            <form action="" class="newsletter-form">
-                <input type="email" placeholder="Enter Your Email" class="newsletter-input">
-                <button type="submit" class="newsletter-btn">Subscribe</button>
-            </form>
-        </div>
+        <div class="newsletter-container container grid"> </div>
     </section>
 
     <!-- ================================================ FOOTER ================================================ -->
@@ -723,9 +686,8 @@
         <div class="footer-container grid">
             <div class="footer-content">
                 <a href="index.html" class="footer-logo">
-                    <img src="assets/images/logo.svg" alt="" class="footer-logo-img">
                 </a>
-                <h4 class="footer-subtitle">Contact</h4>
+              <h4 class="footer-subtitle">Contact</h4>
                 <p class="footer-description">
                     <span>Address:</span> 562 Wellington Road, Street 32, San Francisco
                 </p>
@@ -737,27 +699,24 @@
                 </p>
 
                 <div class="footer-social">
-                    <h4 class="footer-subtitle">Follow Me :</h4>
+                    <h4 class="footer-subtitle">Follow Us:</h4>
 
                     <div class="footer-social-links flexitem">
                         <a href="#">
                             <img src="assets/images/icon-facebook.svg" alt="" class="footer-social-icon">
                         </a>
                         <a href="#">
-                            <img src="assets/images/icon-twitter.svg" alt="" class="footer-social-icon">
                         </a>
                         <a href="#">
                             <img src="assets/images/icon-instagram.svg" alt="" class="footer-social-icon">
                         </a>
                         <a href="#">
-                            <img src="assets/images/icon-pinterest.svg" alt="" class="footer-social-icon">
                         </a>
                         <a href="#">
-                            <img src="assets/images/icon-youtube.svg" alt="" class="footer-social-icon">
                         </a>
                     </div>
-                </div>
-            </div>
+              </div>
+          </div>
             <div class="footer-content">
                 <h3 class="footer-title">My Account</h3>
 
@@ -765,7 +724,7 @@
                     <li><a href="#" class="footer-link">Sign In</a></li>
                     <li><a href="#" class="footer-link">View Cart</a></li>
                     <li><a href="#" class="footer-link">My Wishlist</a></li>
-                    <li><a href="#" class="footer-link">Track My Order</a></li>
+                    <li></li>
                     <li><a href="#" class="footer-link">Help</a></li>
                     <li><a href="#" class="footer-link">Order</a></li>
                 </ul>
@@ -779,7 +738,7 @@
                     <li><a href="#" class="footer-link">Privacy Policy</a></li>
                     <li><a href="#" class="footer-link">Terms & Conditions</a></li>
                     <li><a href="#" class="footer-link">Contact Us</a></li>
-                    <li><a href="#" class="footer-link">Support Center</a></li>
+                    <li></li>
                 </ul>
             </div>
             <div class="footer-content">
@@ -790,7 +749,7 @@
         </div>
 
         <div class="footer-bottom">
-            <p class="copyright">&copy; 2023 Evara. All rights reserved.</p>
+            <p class="copyright">&copy; 2025 Deleens Home Bake. All rights reserved.</p>
             <span class="designer">Made with <i class="ri-heart-fill" style="color: #ff7171;"></i> by Dev Sethi.</span>
         </div>
     </footer>
